--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -24,7 +24,13 @@ jobs:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies
         run: |
+          sudo apt-get install -y fontconfig locate libharfbuzz-dev
+          sudo apt-get install -y fonts-freefont-otf
+          sudo apt-get install -y fonts-urw-base35
+          sudo apt-get install -y fonts-ebgaramond
+          sudo apt-get install -y fonts-ebgaramond-extra
+          sudo apt-get install -y fonts-linuxlibertine
+          sudo apt-get install -y fonts-cantarell
           zef install --/test --deps-only .
-          zef install --/test App::Prove6
       - name: Run Tests
-        run: zef install . --debug
+        run: zef install .
